@@ -1,11 +1,12 @@
 import java.text.NumberFormat;
 import java.util.Locale;
 
-/**
- * Class Product - Merepresentasikan data produk di toko/kafe
- * Implements Comparable supaya bisa di-sort berdasarkan nama,
- * yang diperlukan untuk Binary Search di ProductManager
- */
+/*
+Class Product - Merepresentasikan data produk di toko/kafe
+Implements Comparable supaya bisa di-sort berdasarkan nama,
+yang diperlukan untuk Binary Search di ProductManager
+*/
+
 public class Product implements Comparable<Product> {
 
     private String id;       // ID unik / barcode produk
@@ -31,12 +32,13 @@ public class Product implements Comparable<Product> {
     public void setHarga(double harga) { this.harga = harga; }
     public void setStok(int stok) { this.stok = stok; }
 
-    /**
-     * Mengurangi stok saat barang dibeli
-     * Kompleksitas: O(1) - hanya operasi aritmatika sederhana
-     * @param jumlah jumlah yang akan dikurangi
-     * @return true jika stok cukup, false jika tidak
-     */
+    /*
+    Mengurangi stok saat barang dibeli
+    Kompleksitas: O(1) - hanya operasi aritmatika sederhana
+    @param jumlah jumlah yang akan dikurangi
+    @return true jika stok cukup, false jika tidak
+    */
+    
     public boolean kurangiStok(int jumlah) {
         if (jumlah > stok) {
             return false; // stok tidak cukup
@@ -45,39 +47,43 @@ public class Product implements Comparable<Product> {
         return true;
     }
 
-    /**
-     * Menambah stok (dipanggil saat void/undo pembelian)
-     * Kompleksitas: O(1) - hanya operasi penjumlahan
-     */
+    /*
+    Menambah stok (dipanggil saat void/undo pembelian)
+    Kompleksitas: O(1) - hanya operasi penjumlahan
+    */
+    
     public void tambahStok(int jumlah) {
         stok += jumlah;
     }
 
-    /**
-     * Format harga ke mata uang Rupiah (misal: Rp18.000,00)
-     * Menggunakan NumberFormat bawaan Java dengan Locale Indonesia
-     */
+    /*
+    Format harga ke mata uang Rupiah (misal: Rp18.000,00)
+    Menggunakan NumberFormat bawaan Java dengan Locale Indonesia
+    */
+    
     public String formatHarga() {
-        NumberFormat nf = NumberFormat.getCurrencyInstance(new Locale("id", "ID"));
+        NumberFormat nf = NumberFormat.getCurrencyInstance(Locale.of("id", "ID"));
         return nf.format(harga);
     }
 
-    /**
-     * compareTo membandingkan nama produk secara case-insensitive.
-     * Diperlukan supaya ArrayList<Product> bisa di-sort berdasarkan nama
-     * sehingga Binary Search bisa dijalankan.
-     * 
-     * Kompleksitas: O(k) dimana k = panjang string nama
-     * (tapi biasanya dianggap O(1) karena nama produk pendek)
-     */
+    /*
+    compareTo membandingkan nama produk secara case-insensitive.
+    Diperlukan supaya ArrayList<Product> bisa di-sort berdasarkan nama
+    sehingga Binary Search bisa dijalankan.
+     
+    Kompleksitas: O(k) dimana k = panjang string nama
+    (tapi biasanya dianggap O(1) karena nama produk pendek)
+    */
+    
     @Override
     public int compareTo(Product other) {
         return this.nama.compareToIgnoreCase(other.nama);
     }
 
-    /**
-     * Format tampilan produk untuk tabel CLI
-     */
+    /*
+    Format tampilan produk untuk tabel CLI
+    */
+    
     @Override
     public String toString() {
         return String.format("| %-8s | %-20s | %15s | %5d |",
